# pingblock

./: .gitignore  BETTING_MODE_TRACKING.md  README.md  TRACKING.md
apps/backend/: package-lock.json  package.json
apps/backend/__tests__/: aiPlayer.test.js  gameManager.test.js  physics.test.js  wagerGameManager.test.js  wagerRules.test.js
apps/backend/src/: aiPlayer.js  constants.js  gameManager.js  physics.js  server.js  solanaClient.js  wagerCustodyService.js  wagerRules.js
apps/frontend/: .metadata  README.md  pubspec.yaml
apps/frontend/android/app/: build.gradle.kts
apps/frontend/android/app/src/main/: AndroidManifest.xml
apps/frontend/lib/: main.dart
apps/frontend/lib/game/: ping_pong_game.dart
apps/frontend/lib/game/components/: ball.dart  paddle.dart  wall.dart
apps/frontend/lib/game/overlays/: hud_overlay.dart
apps/frontend/lib/models/: game_constants.dart  game_state.dart  paddle_type.dart  power.dart  wager_amount.dart
apps/frontend/lib/screens/: game_screen.dart  lobby_screen.dart  wallet_connect_screen.dart
apps/frontend/lib/services/: socket_service.dart  wager_api_service.dart  wallet_service.dart
apps/frontend/test/: widget_test.dart
apps/frontend/test/models/: wager_amount_test.dart
apps/frontend/test/screens/: lobby_screen_test.dart  wallet_connect_screen_test.dart
apps/frontend/test/services/: wallet_service_test.dart
docs/: PHASE_A_WAGER_SPEC.md
programs/ping_pong/: Anchor.toml
programs/ping_pong/programs/ping_pong/: Cargo.toml
programs/ping_pong/programs/ping_pong/src/: lib.rs
scripts/: dev.sh  setup.sh
(+3 files in other folders)
